create a final hmtl

--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt 2</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/5e83794a91.js" crossorigin="anonymous"> </script>
+
 <body>
-    
+    <div class="cards">
+        <div class="card one">
+            <h3 class="title">Park Polski</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nam.</p>
+        </div>
+        <div class="card two">
+            <h3 class="title">Park Europy</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nam.</p>
+        </div>
+        <div class="card three">
+            <h3 class="title">Park Ziemi</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nam.</p>
+        </div>
+    </div>
 </body>
 </html>
