change structure in html

--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
     <script src="https://kit.fontawesome.com/5e83794a91.js" crossorigin="anonymous"> </script>
 
 <body>
-    <div class="cards">
         <div class="card one">
-            <h3 class="title">Park Polski</h3>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nam.</p>
+            <div class="img"></div>
+            <div class="text">
+                <h3 class="title">Park Polski</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quisquam?</p>
+            </div>
         </div>
         <div class="card two">
+            <div class="img"></div>
+            <div class="text">
             <h3 class="title">Park Europy</h3>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, accusamus!</p>
+        </div>
         </div>
         <div class="card three">
+            <div class="img"></div>
+            <div class="text">
             <h3 class="title">Park Ziemi</h3>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nam.</p>
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, natus?</p>
         </div>
-    </div>
+        </div>
 </body>
 </html>
