add last card with animation

--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <script src="https://kit.fontawesome.com/5e83794a91.js" crossorigin="anonymous"> </script>
 
 <body>
-        <div class="card one">
-            <div class="img"></div>
-            <div class="text">
+        <div class="card">
+            <div class="img one"></div>
+            <div class=" text text-one">
                 <h3 class="title">Park Polski</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quisquam?</p>
             </div>
-        </div>
-        <div class="card two">
-            <div class="img"></div>
-            <div class="text">
+        </div> 
+        <div class="card">
+            <div class="img two"></div>
+            <div class="text text-two">
             <h3 class="title">Park Europy</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, accusamus!</p>
         </div>
         </div>
-        <div class="card three">
-            <div class="img"></div>
-            <div class="text">
-            <h3 class="title">Park Ziemi</h3>
-           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, natus?</p>
-        </div>
+        <div class="card">
+            <div class="img three"></div>
+            <div class="text text-three">
+                <h3 class="title">Park Ziemi</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, natus?</p>
+             </div>
         </div>
 </body>
 </html>
